@@ -18,7 +18,7 @@ HOST_PREFIX=cross
 HOST_PREFIX_1=cross
 MAKEINFOFLAGS=--no-split
 
-INSTALL_LAST=$(INSTALL_LAST_REAL)
+INSTALL_DOSREL=install-dosrel
 
 
 
